# ClickHouse

./: .gitignore  .gitmodules
contrib/: CMakeLists.txt
contrib/grafite-cmake/: CMakeLists.txt
contrib/surf-cmake/: CMakeLists.txt
experiments/: grafite_vs_minmax_nums.py  surf_vs_bloom_evaluation.py  surf_vs_bloom_nums.py  surf_vs_bloom_nums_ordered.py  surf_vs_bloom_strings.py  surf_vs_bloom_strings_unordered.py  surf_vs_minmax_nums.py  test_index_size.sql
programs/server/: users.xml
src/: CMakeLists.txt
src/Interpreters/: GrafiteFilter.cpp  GrafiteFilter.h  GrafiteFilterHash.h  ITokenExtractor.cpp  ITokenExtractor.h  SurfFilter.cpp  SurfFilter.h  SurfFilterHash.h  SurfFilterKey.h
src/Storages/MergeTree/: MergeTreeIndexGrafiteFilter.cpp  MergeTreeIndexGrafiteFilter.h  MergeTreeIndexSurfFilter.cpp  MergeTreeIndexSurfFilter.h  MergeTreeIndexSurfFilterText.cpp  MergeTreeIndexSurfFilterText.h  MergeTreeIndices.cpp  MergeTreeIndices.h
tests/queries/0_stateless/: 03562_surf_filter_index.sql  03563_map_full_text_surf_filter_index.reference  03563_map_full_text_surf_filter_index.sql  03564_hasToken_and_tokensf.reference  03564_hasToken_and_tokensf.sql  03565_bloom_text_indexes.sql  03566_surf_filter_indexes.reference  03566_surf_filter_indexes.sql
